[project]
name = "comfyui-stabilitytest"
version = "0.0.1"
dependencies = []

[tool.ruff]
lint.select = [
  "N805",  # invalid-first-argument-name-for-method
  "S307",  # suspicious-eval-usage
  "S102",  # exec
  "E",
  "T",     # print-usage
  "W",
  "F",
]
lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]
exclude = ["*.ipynb"]
